# HornMorpho

./: .gitattributes  .gitignore  MANIFEST  MANIFEST.in  README.md  README.rst  README.txt  README4.5.md  README5.1.md  hm.html  hm.py  process.py  profile.py  pyproject.toml  setup.py  setup5.0.py  setup5.1.py  setupA.py  setupA5.py  setupAK.py  setupO.py  setupT.py  setupX.py  setup_HM.py  setup_anal.py  setup_gen.py  test.py  words.lex
.ipynb_checkpoints/: setup-checkpoint.py
Versions/2.6/: MANIFEST.in  README.txt  horn2.6.pages  horn2.6_quick.pages  setup.py
Versions/3.0/: MANIFEST  MANIFEST.in
Versions/3.0A/: setup.py
Versions/3.1/: MANIFEST.in  setup.py
Versions/3.5/: setup.py
Versions/Amharic/: MANIFEST  MANIFEST.in  horn3.1A_quick.pages  setup.py
Web/: hm.html
Web/Resources/: plogs_style.css  style.css  tlj.css
applications/: tadesse_am.txt
docs/: horn2.6a.pages  horn3.0.pages  horn3.0A_quick.pages  horn3.0_quick.pages  horn3_quick.pages  horn4_quick.pages
hm/: __init__.py  proc.py  test.py
hm/languages/: __init__.py
hm/morpho/: __init__.py  altrule.py  am_lang.py  amh_lang.py  anal.py  fs.py  fst.py  language.py  languages.py  letter_tree.py  morphology.py  mtax.py  (+5 more)
src/: ASAI1000-1300.txt  ASAI1300-1500.txt  ASAI500-600.txt  ASAI600-800.txt  ASAI800-1000.txt  caco1.txt  changed.lex  disambig.py  foo.conllu  foo.xml  freqs  hornmorpho.py  irr_nplur.lex  mini1.conllu  new_n.lex  new_t_roots.txt  process.py  test.conllu  test.fst  test.py  tiny0.conllu  tiny_gem.conllu  tvroot.lex  um.py
tmp/: __init__.py  aff_bound.fst  v_stemG.cas
(+1948 files in other folders)
