[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HornMorpho"
version = "5.0"
requires-python = ">= 3.5"
dependencies = ['conllu']
authors = [
    {name = "Michael Gasser", email = "gasser@indiana.edu"},
]
description = "Morphological processing of languages of the Horn of Africa"
readme = "README.md"
keywords = ["morphology", "Amharic", "Tigrinya"]
classifiers = [
      'Development Status :: 5 - Production/Stable',
      'Intended Audience :: Information Technology',
      'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
      'Programming Language :: Python :: 3',
      'Topic :: Text Processing'
]