[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HornMorpho"
version = "5.3.4"
requires-python = ">= 3.9"
dependencies = ['conllu', 'requests']
authors = [
    {name = "Michael Gasser", email = "gasser@iu.edu"},
]
description = "Morphological processing of languages of the Horn of Africa"
readme = "README.rst"
keywords = ["morphology", "Amharic", "Tigrinya", "Oromo", "Tigre"]
classifiers = [
      'Development Status :: 5 - Production/Stable',
      'Intended Audience :: Information Technology',
      'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
      'Programming Language :: Python :: 3',
      'Topic :: Text Processing'
]

[tool.setuptools.packages.find]
where = ["src"]

